base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: TO_BE_REPLACED
  namespace: TO_BE_REPLACED
spec:
  selector:
    app: TO_BE_REPLACED
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
