base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: TO_BE_REPLACED
  namespace: TO_BE_REPLACED
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: TO_BE_REPLACED
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: TO_BE_REPLACED
            port:
              number: 80
